--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Projects - 2 Years of Innovation</title>
+    <title>Rajan's 100 software</title>
     <style>
         * {
             margin: 0;
@@ -229,7 +229,7 @@
             <p>2 Years of Innovation & Development in College</p>
             <div class="stats">
                 <div class="stat-box">
-                    <h3 id="totalProjects">0</h3>
+                    <h3 id="totalProjects">103</h3>
                     <p>Total Projects</p>
                 </div>
                 <div class="stat-box">
