Add GOB project count to stats section

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                 <div class="stat-box">
                     <h3 id="totalProjects">0</h3>
                     <p>Total Projects</p>
+                    <p>40+ are for GOB</p>
                 </div>
                 <div class="stat-box">
                     <h3>8</h3>
