--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="stats">
                 <div class="stat-box">
                     <h3 id="totalProjects">0</h3>
-                    <p>Total Projects</p>
+                    <p>60 are public</p>
                     <p>40+ are for GOB</p>
                 </div>
                 <div class="stat-box">
