--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rajan's 100 software</title>
+    <title>Rajan's 100+ software</title>
     <style>
         * {
             margin: 0;
@@ -198,7 +198,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🚀 My Project Portfolio</h1>
+            <h1>🚀 Project Portfolio</h1>
             <p>2.5 Years of Innovation & Development in College</p>
             <div class="stats">
                 <div class="stat-box">
