--- a/index.html
+++ b/index.html
@@ -240,6 +240,8 @@
             { title: "🏛️ MLA Karanjit Singh BJP Portfolio", link: "https://karanjitsinghbjp.vercel.app/", category: "web", icon: "🏛️" },
             { title: "🍰 Rachit Bakery & Restaurant Website", link: "https://rachitbakery.vercel.app/", category: "web", icon: "🍰" },
             { title: "📱 baRk Apps - Modern Landing Page", link: "https://barkapps.vercel.app/", category: "web", icon: "📱" },
+            { title: "💬 rajan ai - talk to computer to do work orally", link: "https://rajanai.vercel.app/", category: "web", icon: "💬" },
+            { title: "💬 List of 100+ software", link: "https://100software.vercel.app/", category: "web", icon: "💬" },
             { title: "📰 AI News Aggregator Platform", link: "https://probable-giggle-eight.vercel.app/", category: "web", icon: "📰" },
             { title: "💼 Fibud - Business Website", link: "https://fibud.vercel.app/", category: "web", icon: "💼" },
             { title: "🏥 Jeevan AI - Healthcare Assistant", link: "https://jeevanai.streamlit.app", category: "ai", icon: "🏥" },
