Add new ML projects to index.html

--- a/index.html
+++ b/index.html
@@ -292,6 +292,10 @@
             { title: "🎯 Ensemble Model - Advanced Stock Prediction", link: "https://colab.research.google.com/drive/16btxyFr1GIB9WaFU_qK4k6ORLXGZKD4s?usp=drive_link", category: "ml", icon: "🎯" },
             { title: "🌐 Continuous IP Address Fetcher", link: "https://colab.research.google.com/drive/1BBgYzaQZaZuARffFeTDhF4tklTuE8WMC", category: "ml", icon: "🌐" },
             { title: "🔒 Cybersecurity Analysis Framework", link: "https://colab.research.google.com/drive/1TgMXRAkgrg9rgIbqa4xcRKNSA4toYlYB?usp=drive_link", category: "ml", icon: "🔒" },
+            { title: "👥 Sticker Sales Forecasting", link: "https://www.kaggle.com/code/rajan3208/sticker-sales-forecasting", category: "ml", icon: "🥦" },
+            { title: "📈 Stock Price Predictor", link: "https://www.kaggle.com/code/rajan3208/stock-price-predicator", category: "ml", icon: "🥦" },
+            { title: "📄 PDF Analyzer ML Service", link: "https://pdf-analyzer-742175076023.us-central1.run.app", category: "api", icon: "📄" },
+            { title: "📄Receipt Image Date Extraction", link: "https://www.kaggle.com/code/rajan3208/receipt-image-data-extraction-using-pytesseract", category: "ml", icon: "🥦" },
             { title: "🥦 Cauliflower Classification Model", link: "https://colab.research.google.com/drive/1PUzUR51a30xaTX1QDls0Rf6d28jOSZtB?usp=drive_link", category: "ml", icon: "🥦" },
             { title: "💝 Uzmi ML - Sentiment Analysis Engine", link: "https://colab.research.google.com/drive/1RcqYKNsvpVlumA2fUaxFPzVTV5QooCJ_?usp=drive_link", category: "ml", icon: "💝" },
             { title: "🏥 Jeevan AI Health Model - Medical Diagnosis", link: "https://colab.research.google.com/drive/1J_l2ksiv8KISQtLECyMO3M520_rhXI4A?usp=drive_link", category: "ml", icon: "🏥" }
