--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
             { title: "💬 List of 100+ software", link: "https://100software.vercel.app/", category: "web", icon: "💬" },
             { title: "📰 AI News Aggregator Platform", link: "https://probable-giggle-eight.vercel.app/", category: "web", icon: "📰" },
             { title: "💼 Fibud - Business Website", link: "https://fibud.vercel.app/", category: "web", icon: "💼" },
+            { title: "🤖 UzmiGPT (124 million parameters)", link: "https://huggingface.co/rajan3208/uzmi-gpt", category: "ai", icon: "🏥" },
             { title: "🏥 Jeevan AI - Healthcare Assistant", link: "https://jeevanai.streamlit.app", category: "ai", icon: "🏥" },
             { title: "📈 Stox AI - Stock Market Intelligence", link: "https://stoxxai.streamlit.app", category: "ai", icon: "📈" },
             { title: "📄 Resume Maker - AI-Powered CV Generator", link: "https://ucentresume.streamlit.app", category: "ai", icon: "📄" },
